Bug 500014 - Matrix Copy/Paste Operations in LabPlot 2.11.1 Paste Zeros Instead of Copied Values
Summary: Matrix Copy/Paste Operations in LabPlot 2.11.1 Paste Zeros Instead of Copied ...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-13 17:44 UTC by Ruslan Vishtalmagomedov
Modified: 2025-02-22 11:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12
Sentry Crash Report:


Attachments
zeros inserted instead of copied values (58.79 KB, image/png)
2025-02-13 17:44 UTC, Ruslan Vishtalmagomedov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ruslan Vishtalmagomedov 2025-02-13 17:44:53 UTC
Created attachment 178309 [details]
zeros inserted instead of copied values

Affected Systems:

    ALT Education 11.0 KDE
    ALT K Workstation 11.0
    ALT K Workstation 11.0 (updated to Sisyphus)

Version: labplot-2.11.1-alt1

Steps to Reproduce:

    Launch LabPlot 2.
    
    Navigate to File → New.

    In Project Explorer, right-click the project → Add New → Matrix.

    Perform data generation:

        Go to Matrix tab → Generate Data → Function Values.

        Click the text/f(x) button (labeled "Aa" or "F") → select pseudo-random integer → Insert → Generate.

    Copy/paste test:

        Select multiple cells → Matrix tab → Selection → Cut/Copy.

        Select different target cells → Paste.

Expected Behavior:
Copied/cut values are pasted into the target cells.

Actual Behavior:
Target cells are filled with zeros after pasting.

System Information:

    KDE Plasma Version: plasmashell 6.2.5
    Distro: ALT Linux 11.0 (Sisyphus repos for updated systems)

Additional information:
    The bug reproduces starting from labplot-2.8.2-alt1
Comment 1 Alexander Semke 2025-02-22 11:12:49 UTC
Git commit 6e4d942f682498fc9067197d54a34a7613d13b77 by Alexander Semke.
Committed on 22/02/2025 at 11:08.
Pushed by asemke into branch 'master'.

Use the proper local settings when pasting values in Matrix.
FIXED-IN: 2.12

M  +1    -0    ChangeLog
M  +2    -1    src/frontend/matrix/MatrixView.cpp

https://invent.kde.org/education/labplot/-/commit/6e4d942f682498fc9067197d54a34a7613d13b77