Use the proper local settings when pasting values in Matrix.

BUG: 500014
FIXED-IN: 2.12